# office-assistant

./: pyproject.toml
src/office_assistant/tools/: _helpers.py
